# fortran_with_cmake_examples

./: .gitignore  README.md
02_midsize_project/: CMakeLists.txt  build.sh  debug_build.sh
02_midsize_project/src/executable/: CMakeLists.txt  main.F90
